# csync

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
tests/: CMakeLists.txt  main.cpp
